--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@ Ordered by date of first contribution:
 
     Pascal Hartig <phartig@rdrei.net>
     Diogo Baeder
+    Alexander Artemenko <svetlyak.40wt@gmail.com> — TMUX version
